        from being recognized as providers. 
        Contributed by Martin Krasser.
      - Fixed constructor DigestAuthenticator(Context,String,String)
        to properly take into account the "serverKey" parameter.
        Reported by Yang Xudong.
      - Fixed support of inherited annotated methods by ServerResource. 
        Reported by Kevin Pauli.

    - Misc
      - Server connectors now display the port they are listening on
        in their start message.  
      - Optimized by a factor 10, the speed of the getStream() method
        in StringRepresentation, using a ByteArrayInputStream.
      
- 2.0 Release Candidate 3 (2010-04-23)
    - API changes
      - Replaced MemoryRealm#findRoles(Set<Group>, User) method by
        findRoles(Set<Group>), findRoles(Group) and findRoles(User)
        to clarify contract. Suggested by Brunon Harbulot.
      - Added proxy configuration to the internal client connector 
        (necessary for the sip connector).
      - Added "ftl" extension to MetadataService for FreeMarker 
        templates.
      - Keeped few MediaType constants for the GWT edition in order 
        to reduce size.
    - Bugs fixed
      - Fixed support of parameters with the MediaType class. The 
        name contains the the main and sub types, plus the parameters.
        Reported by Carsten Lohmann.
      - Fixed generation of GET request sent by the internal 
        connector just after a request with an entity.
      - Moved ServletUtils class introduced in RC2 into the 
        org.restlet.ext.servlet package.
      - Fixed potential NPE with the Extractor.
        Reported by Graham Smith.
      - Fixed parsing of "nc" parameter and fixed potential endless 
        loop in HttpDigestHelper. Reported by Mark Drew.
      - Fixed issues preventing multi-threaded usage of ClientResource
        and dynamic client proxies.
      - Fixed concurrency bug with annotated interfaces causing