@@ -1,11 +1,11 @@
 <HTML>
 <BODY>
-Information exchanged by components. "A datum is an element of information
-that is transferred from a component, or received by a component, via a 
-connector." Roy T. Fielding.
-<p>
-
-@since Restlet 1.0
-@see <a href="http://www.ics.uci.edu/~fielding/pubs/dissertation/software_arch.htm#sec_1_2_3">Source dissertation</a>
+	Information exchanged by components. "A datum is an element of information
+	that is transferred from a component, or received by a component, via a 
+	connector." Roy T. Fielding.
+	<p>
+	@since Restlet 1.0
+	@see <a href="http://www.ics.uci.edu/~fielding/pubs/dissertation/software_arch.htm#sec_1_2_3">Source dissertation</a>
+    @see <a href="http://wiki.restlet.org/docs_2.0/13-restlet/27-restlet/330-restlet.html">Restlet User Guide - Data package</a>
 </BODY>
 </HTML>
