@@ -1,7 +1,8 @@
 <HTML>
 <BODY>
-Implementation of Restlet API.
-<p>
-@since Restlet 2.0
+	Implementation of Restlet API.
+	<p>
+	@since Restlet 2.0
+	@see <a href="http://wiki.restlet.org/docs_2.0/13-restlet/48-restlet.html">Restlet User Guide - Engine</a>
 </BODY>
 </HTML>
