@@ -1,9 +1,9 @@
 <HTML>
 <BODY>
-Core classes of the API.
-<p>
-    @since Restlet 1.0
-    @see <a href="http://www.ics.uci.edu/~fielding/pubs/dissertation/software_arch.htm">REST dissertation by Roy T.
-    Fielding</a>
+	Core classes of the API.
+	<p>
+	@since Restlet 1.0
+	@see <a href="http://www.ics.uci.edu/~fielding/pubs/dissertation/software_arch.htm">REST dissertation by Roy T. Fielding</a>
+	@see <a href="http://wiki.restlet.org/docs_2.0/13-restlet/27-restlet/325-restlet.html">Restlet User Guide - Base package</a>
 </BODY>
 </HTML>
