@@ -1,7 +1,8 @@
 <HTML>
 <BODY>
-Common representation data elements.
-
-@since Restlet 2.0
+	Common representation data elements.
+	<p>
+	@since Restlet 2.0
+    @see <a href="http://wiki.restlet.org/docs_2.0/13-restlet/27-restlet/327-restlet.html">Restlet User Guide - Representation package</a>
 </BODY>
 </HTML>
