@@ -1,7 +1,8 @@
 <HTML>
 <BODY>
-Client and server resource classes.
-
-@since Restlet 1.0
+	Client and server resource classes.
+	<p>
+	@since Restlet 1.0
+    @see <a href="http://wiki.restlet.org/docs_2.0/13-restlet/27-restlet/328-restlet.html">Restlet User Guide - Resource package</a>
 </BODY>
 </HTML>
