@@ -1,7 +1,8 @@
 <HTML>
 <BODY>
-Classes related to call routing.
-
-@since Restlet 2.0
+	Classes related to call routing.
+	<p>
+	@since Restlet 2.0
+    @see <a href="http://wiki.restlet.org/docs_2.0/13-restlet/27-restlet/326-restlet.html">Restlet User Guide - Routing package</a>
 </BODY>
 </HTML>
