@@ -1,7 +1,8 @@
 <HTML>
 <BODY>
-Classes related to security.
-
-@since Restlet 2.0
+	Classes related to security.
+	<p>
+	@since Restlet 2.0
+    @see <a href="http://wiki.restlet.org/docs_2.0/13-restlet/27-restlet/46-restlet.html">Restlet User Guide - Security package</a>
 </BODY>
 </HTML>
