@@ -1,8 +1,8 @@
 <HTML>
 <BODY>
-Services used by applications and components.
-<p>
-
-@since Restlet 1.0
+	Services used by applications and components.
+	<p>
+	@since Restlet 1.0
+    @see <a href="http://wiki.restlet.org/docs_2.0/13-restlet/27-restlet/331-restlet.html">Restlet User Guide - Service package</a>
 </BODY>
 </HTML>
