@@ -1,8 +1,8 @@
 <HTML>
 <BODY>
-Various utility classes.
-<p>
-
-@since Restlet 1.0
+	Various utility classes.
+	<p>
+	@since Restlet 1.0
+    @see <a href="http://wiki.restlet.org/docs_2.0/13-restlet/27-restlet/329-restlet.html">Restlet User Guide - Util package</a>
 </BODY>
 </HTML>
