@@ -43,12 +43,15 @@ Changes log
         Reported by Yang Xudong.
       - Fixed support of inherited annotated methods by ServerResource. 
         Reported by Kevin Pauli.
-
     - Misc
       - Server connectors now display the port they are listening on
         in their start message.  
       - Optimized by a factor 10, the speed of the getStream() method
         in StringRepresentation, using a ByteArrayInputStream.
+      - Improved ServerResource Javadocs with lifecycle information.
+        Suggested by Alex Milowski.
+      - Added links from API packages to user guide (wiki).
+        Suggested by Alex Milowski.
       
 - 2.0 Release Candidate 3 (2010-04-23)
     - API changes
